[gd_scene load_steps=5 format=2]

[ext_resource path="res://sounds/metronome01.wav" type="AudioStream" id=1]
[ext_resource path="res://Beat.gd" type="Script" id=2]
[ext_resource path="res://sounds/metronome02.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/laser.wav" type="AudioStream" id=5]

[node name="Beat" type="Node2D"]
script = ExtResource( 2 )
bpm = 160

[node name="metronome01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="metronome02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.0

[node name="metronome03" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="mainTempo" type="Timer" parent="."]
[connection signal="timeout" from="mainTempo" to="." method="_on_mainTempo_timeout"]
